# attendance

./: .env  .env.production  .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  Dockerfile.api  Makefile  README.md  biome.json  bun.lockb  components.json  dprint.json  eslint.config.js  firebase.json  flake.nix  next.config.mjs  nuxt.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  rust-toolchain.toml  shell.nix  start.sh  tailwind.config.ts  tsconfig.json  vercel.json
src-api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  openapi.yml  static
src-api/.sqlx/: query-1f31ed86ef584a1ad61404fa779a10b736138daccb8770e6cd24e4215ca2e753.json  query-2166684ad1ac499ad6724841b376ce4ae1e307bba2c81e1badfde7383516d0c2.json  query-24a59431b4788739474e794b464bdfabda19762aef0b08151f5244ee5afd716f.json  query-25381fa18a113a0ba59910e7f068ad2e06ce78020861d090e656c16a98b09c7f.json  query-2a923b421e261727942090f1df159bc7f10549a97d037a3aed4f314a2bf346fc.json  query-2bef4f761bf78398660b912869933d9c443e8c45b0ff151f72188ac3bbc71f8f.json  query-397d57c04d4018f49d69779658ede2887bc7a3ccd97974d2f757718a2293bc45.json  query-467836d36cfaa7b1782b14d6b389c3b946f6a5918c7a1fe2ae25d97da1c35856.json  query-47f4f5da2fd12843ca47ecd6c933e94ca62e693875d5219d117b0efbd4b1c162.json  query-577674b85bfcbf5427e8eb70510e17cd6d37362fb9b7c08b433bb7a5c2cb0686.json  query-5dc4485c6c0cb871ada675272a560c25cd13813fa3dc6d25730ea06356a087d5.json  query-773565fc9416b2297975c195e3c7e475aa9b456017552e81170271107fcf70f1.json  query-ed6309a7b83f8c8aede6c67d49adff888ec1906a5f1926bd8b90a5e18a5ecd65.json
src-api/migrations/: 20240917142621_init.sql  20240917184202_pluralize.sql  20240917184328_sign_out.sql  20240918120638_not_null.sql  20241015000058_noid.sql  20241016030955_string_ids.sql  20250512145542_hour-types.sql  20250516124214_encrypted-data.sql  20250524181957_rename-csv.sql  20250610180642_insert-cryptstore.sql  20250610223412_listener.sql  20250614183710_listener-more-data.sql  20250910021314_time_checks.sql  20250920222914_listener-notify-name.sql  20250922204316_offseason-hour-type.sql  20250923122101_pw-in-db.sql  20250923195345_srp.sql  20251001023911_token-timeout.sql  20251104014801_structured_encrypted.sql  20251106032233_student_data_hash.sql  20251106032341_student_data_id.sql  20251106034812_student_data_pkey.sql  20251106035141_student_data_hash_nodefault.sql  20251108204022_student_data_update.sql  20251125225304_users.sql  20251126014144_students.sql  20251126014251_fkey.sql  20251126021507_srp_creation.sql  20251126220419_invitation.sql  20251126220622_not_null_2.sql  20251126220727_invite_expiry.sql  20251202144825_invite_k2.sql  20251202161924_invite_student_id.sql  20251202162004_student_id_semantics.sql  20251202163303_student_id_semantics_2.sql  20251202164101_register_sessions.sql  20251202185110_register_session_2.sql  20251202190500_register_session_expiry.sql  20251202212417_permission_update.sql  20251207213429_new_listeners.sql  (+32 more)
src-api/scripts/: openapi.rs
src-api/src/: csv.rs  error.rs  lib.rs  main.rs  model.rs  prelude.rs  serde.rs
src-api/src/admin/: delete.rs  mod.rs  query.rs  update.rs
src-api/src/auth/: invite.rs  jwt.rs  login.rs  mod.rs  onboard.rs  prelude.rs  register.rs
src-api/src/dbstream/: mod.rs  tables.rs  types.rs
src-api/src/http/: auth.rs  hours.rs  mod.rs  roster.rs  student.rs
src-api/src/middleware/: errors.rs  headers.rs  mod.rs  requests.rs
src-api/src/roster/: crud.rs  hour_type.rs  mod.rs  present.rs  swipe.rs  totp.rs
src-api/src/routes/: csv.rs  exists.rs  hours.rs  log.rs  login.rs  mod.rs  register.rs  roster.rs
src-api/src/student/: add.rs  delete.rs  hours.rs  id.rs  mod.rs  query.rs  update.rs
src-api/src/telemetry/: events.rs  mod.rs  query.rs  stream.rs
src-api/src/ws/: connection.rs  (+9 more)
src-crypto/: Cargo.toml  README.md
src-crypto/.cargo/: config.toml
src-crypto/src/: argon2.rs  lib.rs  random.rs  totp.rs
src-macro/: .env  Cargo.toml  README.md
src-macro/src/: lib.rs
(+273 files in other folders)
