[package]
name = "attendance-api"
version = "2.0.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.3.0"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
cuid = "1.3.3"
dotenvy = "0.15.7"
futures-util = "0.3.31"
itertools = "0.14.0"
rand = "0.9.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"tls-native-tls",
	"chrono",
	"postgres",
] }
thiserror = { git = "https://github.com/onlycs/thiserror" }
time = "0.3.44"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
