[package]
name = "attendance-api"
version = "2.0.0"
default-run = "attendance-api"
edition = "2024"

[[bin]]
name = "attendance-api"
path = "src/main.rs"

[[bin]]
name = "openapi"
path = "scripts/openapi.rs"

[dependencies]
async-stream = "0.3.6"
attendance-api-macro = { version = "0.1.0", path = "../src-macro" }
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
cuid = "1.3.3"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
oade = { path = "../../oade" }
poem = { git = "https://github.com/onlycs/poem", features = ["websocket"] }
poem-openapi = { git = "https://github.com/onlycs/poem", features = ["chrono", "scalar"] }
rand = "0.9.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres"] }
srp = "0.6.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = { git = "https://github.com/onlycs/thiserror" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "serde"] }
