[package]
name = "attendance-api-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy_macro = "0.15.7"
heck = "0.5.0"
itertools = "0.14.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
syn = "2.0.111"
tokio = { version = "1.48.0", features = ["rt"] }

[lib]
proc-macro = true
